# VideoPlayer

./: CMakeLists.txt  Main.qml  README.md  RecentFilesPopup.qml  ToastMessage.qml  main.cpp  preferences.cpp  preferences.h  qml.qrc  recentfiles.cpp  recentfiles.h
images/: desktop.ini
